--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,11 +3,15 @@
     <app-shopping-edit></app-shopping-edit>
     <hr />
     <ul class="list-group">
+      <!-- Add async pipe to first subscribe to ingredients observable, for a return value of ingredients arrray -->
       <a
         class="list-group-item"
         style="cursor: pointer"
         (click)="onEditItem(i)"
-        *ngFor="let ingredient of ingredients; let i = index"
+        *ngFor="
+          let ingredient of (ingredients | async).ingredients;
+          let i = index
+        "
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
